added more multiple choice questions

--- a/Contact.html
+++ b/Contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+    <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
     
 
 </head>
