--- a/Links.html
+++ b/Links.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+    <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
 <style>
     .m {
         position: relative;
@@ -25,14 +25,14 @@
 </style>
 </head>
 <body>
-<script src="../WATT.js"></script>
+<script src="WATT.js"></script>
 
 
 
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="../Header%20Images/LINKS.png" id="links" style="width:100%;"/>
+        <img src="LINKS.png" id="links" style="width:100%;"/>
 
         <div class="row-resource schools">
             <div class="column-resource">
