--- a/Photos.html
+++ b/Photos.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+    <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
 <style>
     .m {
         position: relative;
@@ -25,14 +25,14 @@
 </style>
 </head>
 <body>
-<script src="../WATT.js"></script>
+<script src="WATT.js"></script>
 
 
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
 
-        <img src="../Header%20Images/PHOTO.png" style="width:100%;" id="photos"/>
+        <img src="PHOTO.png" style="width:100%;" id="photos"/>
         <div style="text-align: center;">
             <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
         </div>
