--- a/WATT.html
+++ b/WATT.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+    <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     .m {
@@ -40,7 +40,7 @@
 </style>
 </head>
 <body>
-<script src="../WATT.js"></script>
+<script src="WATT.js"></script>
 
 
 <div class="n">
@@ -57,7 +57,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="../Banner%20Images/banner2.png" style="object-position: 50% 50%; width: 1000px; height: 348px; object-fit: cover;">
+            <img src="banner2.png" style="object-position: 50% 50%; width: 1000px; height: 348px; object-fit: cover;">
         </div>
 
         <div class="mySlides fade">
@@ -84,7 +84,7 @@
     <div class="row-mission padding-mission64" id="mission">
         <table>
             <tr>
-                <td><img class="img-mission" src="../Team%20Images/logo.png" alt="WATT logo"></td>
+                <td><img class="img-mission" src="Team%20Images/logo.png" alt="WATT logo"></td>
                 <td>
 
                     <div class="col-mission padding-mission1224">
@@ -103,7 +103,7 @@
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
 
-    <img src="../Header%20Images/LOCATIONS.png" style="width:100%;" id="schools"/>
+    <img src="LOCATIONS.png" style="width:100%;" id="schools"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
