--- a/WATTPage.html
+++ b/WATTPage.html
@@ -16,7 +16,7 @@
 
     <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="../Banner%20Images/banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
+        <img src="banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
     </div>
 
     <div class="mySlides fade">
@@ -43,7 +43,7 @@
     <div class="row-mission padding-mission64" id="mission">
         <table>
             <tr>
-                <td><img class="img-mission" src="../Team%20Images/logo.png" alt="WATT logo"></td>
+                <td><img class="img-mission" src="Team%20Images/logo.png" alt="WATT logo"></td>
                 <td>
 
                     <div class="col-mission padding-mission1224">
@@ -59,7 +59,7 @@
 
 
 
-    <img src="../Header%20Images/LOCATIONS.png" style="width:100%;" id="schools"/>
+    <img src="LOCATIONS.png" style="width:100%;" id="schools"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
