--- a/testmultiple.html
+++ b/testmultiple.html
@@ -24,7 +24,7 @@
 <script>
     var myQuestions = [
         {
-            question: " What does HTML Stand For?",
+            question: " 1. What does HTML Stand For?",
             answers: {
                 a: ' Hyperlinks and Text Markup Language ',
                 b: ' Hyper Text Markup Language ',
@@ -33,7 +33,7 @@
             correctAnswer: 'b'
         },
         {
-            question: " Choose the correct HTMl element for the largest heading?",
+            question: " 2. Choose the correct HTMl element for the largest heading?",
             answers: {
                 a: ' head ',
                 b: ' h6 ',
@@ -42,11 +42,29 @@
             correctAnswer: 'c'
         },
         {
-            question: " What does CSS stand for?",
+            question: " 3. What does CSS stand for?",
             answers: {
                 a: ' Cascading Style Sheets ',
                 b: ' Computer Style Sheets ',
                 c: ' Creative Style Sheets '
+            },
+            correctAnswer: 'a'
+        },
+        {
+            question: " 4. What is the correct HTML element for inserting a line break?",
+            answers: {
+                a: ' break ',
+                b: ' br ',
+                c: ' bk '
+            },
+            correctAnswer: 'b'
+        },
+        {
+            question: " 5. Choose the correct HTML element to define important text.",
+            answers: {
+                a: ' strong ',
+                b: ' bold ',
+                c: ' important '
             },
             correctAnswer: 'a'
         }
