--- a/Calendar.html
+++ b/Calendar.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+    <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
 <style>
     .m {
         position: relative;
@@ -25,7 +25,7 @@
 </style>
 </head>
 <body>
-<script src="../WATT.js"></script>
+<script src="WATT.js"></script>
 
 
 
@@ -33,7 +33,7 @@
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="../Header%20Images/CALENDAR.png" style="width:100%;" id="calendar"/>
+        <img src="CALENDAR.png" style="width:100%;" id="calendar"/>
         <div class="calendar" align="center">
             <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
         </div>
