--- a/CodePen.html
+++ b/CodePen.html
@@ -3,12 +3,12 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="style.css">
         <title>WATT Website</title>
-        <script src="../WATT.js"></script>
+        <script src="WATT.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-        <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
+        <link rel="icon" type=logo" href="Team%20Images/logo.png"/>
 <style>
     .m {
         position: relative;
@@ -26,12 +26,12 @@
 </style>
     </head>
     <body>
-    <script src="../WATT.js"></script>
+    <script src="WATT.js"></script>
 
 <div class="m">
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
-            <img src="../Header%20Images/Practice.png" style="width:100%;"/>
+            <img src="Practice.png" style="width:100%;"/>
             <p class="codepen" data-height="600" data-theme-id="0" data-default-tab="html,result" data-user="wattcoding" data-slug-hash="WqyKLX" style="height: 1000px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="WATT WEBSITE">
   <span>See the Pen <a href="https://codepen.io/wattcoding/pen/WqyKLX/">
   WATT WEBSITE</a> by WATT (<a href="https://codepen.io/wattcoding">@wattcoding</a>)
@@ -61,18 +61,18 @@
         <h3>4. Adding Images</h3>
         <p>In HTML images are defined using a "img" tag. Use img src= " " to specify a URL in which you want to access a photo from. The "alt" tag is used a a description of your picture. This is helpful if your website doesnt load the picture, the user will still be able to know what the image was supposed to be.</p>
         <p>Note: You cannot just copy the image url. Right click and copy the image address and then paste that for the image src.</p>
-        <img src="../CodePen%20Images/ourmissioncodepen.png" style="width:100%;"/>
+        <img src="ourmissioncodepen.png" style="width:100%;"/>
         <h3>5. Adding Videos</h3>
         <p>The tag iframe is used when you want to display another web page in your web page such as a youtube video.</p>
         <p>1. Use the format of "iframe src="youtube-video"</p>
         <p>2. You can also change the height and width of a image or video by adding within the iframe tag "height=num" and "width=num"</p>
-        <img src="../CodePen%20Images/addedvideocodepen.png" style="width:100%;"/>
+        <img src="addedvideocodepen.png" style="width:100%;"/>
         <hr>
         <h3>6. Creating "DIVS"</h3>
         <p>A div element creates a section or division. You can identify a div by giving it a class name.</p>
         <p>1. For example: To center a section of elements create a class in your css file. To create a class for a div use "div.nameofclass" and then brackets</p>
         <p>2. For the purpose of this lesson create a class that will center the text of your div elements. To center text use "text-align:center;</p>
-        <img src="../CodePen%20Images/divelementcodepen.png" style="width:100%;" /></div>
+        <img src="divelementcodepen.png" style="width:100%;" /></div>
 
 </div>
     </body>
