added more to my multiple choice test

--- a/testmultiple.html
+++ b/testmultiple.html
@@ -66,6 +66,42 @@
             },
             correctAnswer: 'a'
         },
+        {
+            question: " 6. Choose the correct HTML element to define emphasized text",
+            answers: {
+                a: ' bold ',
+                b: ' em ',
+                c: ' strong '
+            },
+            correctAnswer: 'b'
+        },
+        {
+            question: " 7. Which CSS property controls the text size?",
+            answers: {
+                a: ' text-size ',
+                b: ' font-num ',
+                c: ' font-size '
+            },
+            correctAnswer: 'c'
+        },
+        {
+            question: " 8. What is the correct CSS syntax for making all the p elements bold?",
+            answers: {
+                a: ' p style = text-size:bold; ',
+                b: ' p style = font-size:bold; ',
+                c: ' p=bold '
+            },
+            correctAnswer: 'b'
+        },
+        {
+            question: " 9. Which character is used to indicate an end tag?",
+            answers: {
+                a: ' / ',
+                b: ' *',
+                c: ' <'
+            },
+            correctAnswer: 'a'
+        },
     ];
 
     var quizContainer = document.getElementById('quiz');
