added more questions

--- a/testmultiple.html
+++ b/testmultiple.html
@@ -102,6 +102,24 @@
             },
             correctAnswer: 'a'
         },
+        {
+            question: " 10. Which of these elements are all table elements?",
+            answers: {
+                a: ' table, tr, td ',
+                b: ' table, head, foot',
+                c: ' table, tr, tb'
+            },
+            correctAnswer: 'a'
+        },
+        {
+            question: " 10. Which of these elements are all table elements?",
+            answers: {
+                a: ' table, tr, td ',
+                b: ' table, head, foot',
+                c: ' table, tr, tb'
+            },
+            correctAnswer: 'a'
+        },
     ];
 
     var quizContainer = document.getElementById('quiz');
