added more questions

--- a/HomePage.html
+++ b/HomePage.html
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div>
-</div>16q76
+</div>
 
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
