--- a/testmultiple.html
+++ b/testmultiple.html
@@ -112,11 +112,29 @@
             correctAnswer: 'a'
         },
         {
-            question: " 10. Which of these elements are all table elements?",
+            question: " 11. How can you make a numbered list?",
             answers: {
-                a: ' table, tr, td ',
-                b: ' table, head, foot',
-                c: ' table, tr, tb'
+                a: ' dl ',
+                b: ' ul ',
+                c: ' ol '
+            },
+            correctAnswer: 'c'
+        },
+        {
+            question: " 12. How can you make a bulleted list?",
+            answers: {
+                a: ' dl ',
+                b: ' ul ',
+                c: ' ol '
+            },
+            correctAnswer: 'b'
+        },
+        {
+            question: " 13. What is the default value of the position property?",
+            answers: {
+                a: ' static ',
+                b: ' absolute ',
+                c: ' fixed '
             },
             correctAnswer: 'a'
         },
